fix(timeline): make header info selectable and readable

--- a/css/legacy/includes/_styles.scss
+++ b/css/legacy/includes/_styles.scss
@@ -1541,3 +1541,7 @@ div.banner-need-update {
    padding: 10px;
    text-align: right;
 }
+
+.user-select {
+   user-select: text !important;
+}
